--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,5 +12,6 @@ min-height: 100%;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     border-bottom-left-radius: 23px;
+    box-shadow: 0 30px 2em #00000042;
 }
 }
