--- a/src/app/components/todo-item/todo-item.component.scss
+++ b/src/app/components/todo-item/todo-item.component.scss
@@ -15,4 +15,9 @@
             cursor: pointer;
         }
     }
+    &.is-completed{
+        p{
+            text-decoration: line-through;
+        }
+    }
 }
