--- a/src/app/components/todo/todo.component.scss
+++ b/src/app/components/todo/todo.component.scss
@@ -1,7 +1,8 @@
 .header{
     text-align: center;
-    letter-spacing: 2.5px;
+    letter-spacing: 2.8px;
     color:#4a9d9c;
+    text-transform: uppercase;
 }
 .forms{
     .form-group{
